# SMART-WATER-METER

./: README.md  partitions_ota.csv
components/adc_monitor/: CMakeLists.txt  adc_monitor.c
components/adc_monitor/include/: adc_monitor.h
components/ble_buffer/: CMakeLists.txt  ble_buffer.c
components/ble_buffer/include/: ble_buffer.h
components/cyclic_counter/: CMakeLists.txt  cyclic_counter.c
components/cyclic_counter/include/: cyclic_counter.h
components/deep_sleep_manager/: CMakeLists.txt  deep_sleep_manager.c
components/deep_sleep_manager/include/: deep_sleep_manager.h
components/eeprom_24cxx/: CMakeLists.txt  eeprom_24cxx.c
components/eeprom_24cxx/include/: eeprom_24cxx.h
components/lora_manager/: CMakeLists.txt  lora_manager.c
components/lora_manager/include/: lora_manager.h
components/meter_helper/: CMakeLists.txt  meter_helper.c
components/meter_helper/include/: meter_helper.h
components/meter_storage/: CMakeLists.txt  meter_storage.c
components/meter_storage/include/: meter_storage.h
components/nimble_adv/: CMakeLists.txt  nimble_adv.c
components/nimble_adv/include/: nimble_adv.h
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/tamper/: CMakeLists.txt  tamper.c
components/tamper/include/: tamper.h
components/watchdog/: CMakeLists.txt  watchdog.c
components/watchdog/include/: watchdog.h
components/wm_auth/: CMakeLists.txt  wm_auth.c
components/wm_auth/include/: wm_auth.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  text
